--- a/src/.env
+++ b/src/.env
@@ -1,3 +1,3 @@
 REACT_APP_GOOGLE_MAPS_API_KEY=your_api_key_here
 REACT_APP_GOOGLE_MAPS_API_KEY=your_actual_api_key_here
-REACT_APP_MAP_ID=your_map_id_here  # Optional for custom styled maps
+REACT_APP_MAP_ID=your_map_id_here  # Optional for custom styled map
